--- a/package.json
+++ b/package.json
@@ -6,9 +6,6 @@
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
-    "@types/react-redux": "^7.1.12",
-    "@types/redux": "^3.6.0",
-    "@types/redux-saga": "^0.10.5",
     "axios": "^0.21.0",
     "class-transformer": "^0.3.1",
     "fontsource-roboto": "^3.1.5",
@@ -68,6 +65,9 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-prettier": "^3.3.0",
     "eslint-plugin-react": "^7.21.5",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "@types/react-redux": "^7.1.12",
+    "@types/redux": "^3.6.0",
+    "@types/redux-saga": "^0.10.5"
   }
 }
